--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
         <img class="img-responsive img-thumbnail" src="images/jttp_timetracker.png"
           alt="Timetracker" />
           
-        <h3 id="date_modification">Date format</h3>
+        <h3 id="date_format">Date format</h3>
         <p>Timetracker plugin use the JIRA Look and feel settings (Complete Date/Time Format and Day/Month/Year Format) to display dates.</p>
 
         <h3 id="date_modification">Date modification</h3>
@@ -755,6 +755,7 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
 		  <li><a href="#menu">Menu</a></li>
           <li><a href="#interface">Timetracker plugin interface and input fields</a>
             <ul class="nav nav-pills nav-stacked">
+              <li><a href="#date_format">Date format</a></li>
               <li><a href="#date_modification">Date modification</a></li>
               <li><a href="#worklog_total">Worklog total</a></li>
               <li><a href="#worklog_table">Worklog table</a></li>
