update latest releases

--- a/index.html
+++ b/index.html
@@ -514,21 +514,37 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
 	  
       <div class="bs-docs-featurette cookbook" id="release_notes">
         <h2>Release notes</h2>
-        <h3>Timetracker version 2.3.2</h3>
+		<h3>Timetracker version 2.3.5</h3>
 		<h4 style="margin-left: 20px;">Bugfix</h4>
         <ul>
-          <li>Use the fractions correctly if they were specified in the JIRA Time
-              Tracking Configuration. (<a
-            href="https://github.com/everit-org/jira-timetracker-plugin/issues/133">#133</a>)
+          <li>Chart and Table report user picker error fixed. 
           </li>
-            <li>EveritWorklog NullPointerException. (<a
-            href="https://github.com/everit-org/jira-timetracker-plugin/issues/162">#162</a>)
+            <li>Admin settings shows wrong error message fixed. 
           </li>
-            <li>Use Jira Look and feel Complete Date/Time Format and Day/Month/Year
-                Format. (<a
-            href=" https://github.com/everit-org/jira-timetracker-plugin/issues/169">#169</a>)
+            <li>Missings worklog "work hours per day" error fixed. 
           </li>
         </ul>
+		<h3>Timetracker version 2.3.4</h3>
+		<h4 style="margin-left: 20px;">Hotfix</h4>
+        <ul>
+          <li>Look and Feel dateparser bugfix. 
+          </li>
+            <li>Exclude/Include date settings bugfix. 
+          </li>
+            <li>User picker refactor. 
+          </li>
+        </ul>
+		<h3>Timetracker version 2.3.3</h3>
+		<h4 style="margin-left: 20px;">Bugfix</h4>
+        <ul>
+          <li>Use Jira Look and feel Complete Date/Time Format and Day/Month/Year Format.
+          </li>
+            <li>Use the fractions correctly if they were specified in the JIRA Time Tracking Configuration. (<a
+            href="https://github.com/everit-org/jira-timetracker-plugin/issues/133">#133</a>)
+          </li>
+            <li>Fixed EveritWorklog NullPointerException. 
+          </li>
+        </ul>        
 		<h3>Timetracker version 2.3.1</h3>
 		<h4 style="margin-left: 20px;">Bugfix</h4>
         <ul>
