--- a/index.html
+++ b/index.html
@@ -554,6 +554,26 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
 	  
       <div class="bs-docs-featurette cookbook" id="release_notes">
         <h2>Release notes</h2>
+        <h3>Timetracker version 3.0.0</h3>		
+		<h4 style="margin-left: 20px;">Improvements</h4>
+        <ul>		
+          <li>New reporting feature.</li>
+		  <li>Added jira-querydsl-support.</li>
+        </ul>
+        <h4 style="margin-left: 20px;">Changes</h4>
+        <ul>
+          <li>Compatible with JIRA 7.x and above.</li>
+        </ul>  
+        <h3>Timetracker version 2.4.0</h3>		
+		<h4 style="margin-left: 20px;">Improvements</h4>
+        <ul>		
+          <li>New reporting feature.</li>
+		  <li>Added jira-querydsl-support.</li>
+        </ul>
+        <h4 style="margin-left: 20px;">Changes</h4>
+        <ul>
+          <li>Compatible with JIRA 6.3.0 to 6.4.13.</li>
+        </ul>         
 		<h3>Timetracker version 2.3.5</h3>
 		<h4 style="margin-left: 20px;">Bugfix</h4>
         <ul>
