added reporting settings

--- a/index.html
+++ b/index.html
@@ -432,6 +432,14 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
         <p>Create detailed reports with multiple search criteria or one of your favorite filters and view every work log related to the users and additional information about the projects and the issues.</p>
         <img class="img-responsive img-thumbnail" src="images/reporting.png"
           alt="Reporting" />
+        <h3 id="reporting_settings">Settings</h3>
+        <p>The Reporting settings may be accessed only by the system administrators. The administrator can find the Reporting settings menu item on the Administrator page under the Plugins or Add-ons menu in the Timetracker submenu.</p>
+        <h4>Permission</h4>    
+        <p>By default all users have permission to view and use Timetracker Reporting. If you would like to restrict usability, you can add JIRA groups here that have permits to view and use Reporting.</p>
+        <h4>Page size</h4>    
+        <p>You can set the initial page length of Worklog details and Quick summary reports. This option will change the number of rows to display on a single page in the reports.</p>
+        <img class="img-responsive img-thumbnail" src="images/rep_settings.png"
+          alt="Reporting settings" />
         <h3 id="reporting_search_criteria">Search criteria</h3>
         <p>Dynamic queries for work log reporting. Timetracker Reporting provides the main search criteria which you already know from the JIRA Issue Navigator and with a similar look and feel. You can search for projects, issues and worklogs and for their properties. You can define your search criteria in two way: using the basic search or search with one of your favorite filters.</p>
         <img class="img-responsive img-thumbnail" src="images/rep_search1.png"
@@ -854,6 +862,7 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
           <li><a href="#table_report">Table report</a></li>
           <li><a href="#reporting">Reporting</a>
             <ul class="nav nav-pills nav-stacked">
+              <li><a href="#reporting_settings">Settings</a></li>
               <li><a href="#reporting_search_criteria">Search criteria</a></li>
               <li><a href="#reporting_details">Time Tracking Details</a></li>
               <li><a href="#reporting_summary">Quick Summary</a></li>
