Add release notes and new guide link

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
   </div>
   <div class="container">
     <div class="text-center text-danger" style="padding-top: 1em;">
-      Do you need JIRA and OSGi developers? <strong>Daily rates start from 150 €!</strong> For more
-      information, please <a href="http://www.everit.biz#contact">contact us</a>!
+      <strong>This guide is for an older version of Timetracker (3.1.1 and 2.5.1).</strong> For the latest, 
+      please see <a href="https://confluence.everit.biz/display/TD/Timetracker+Documentation">here</a>!
     </div>
     <div class="col-md-10">
 
@@ -570,6 +570,16 @@ Easier, faster time tracking, and timelog reporting." charset="utf-8">
 	  
       <div class="bs-docs-featurette cookbook" id="release_notes">
         <h2>Release notes</h2>
+          <h3>Timetracker version 3.1.1</h3>
+		<h4 style="margin-left: 20px;">Bugfix</h4>
+        <ul>	          
+		  <li>Reporting Export limit/offset fixed.</li>          
+        </ul>
+        <h3>Timetracker version 2.5.1</h3>	
+		<h4 style="margin-left: 20px;">Bugfix</h4>
+        <ul>
+          <li>Reporting Export limit/offset fixed.</li>          
+        </ul>
           <h3>Timetracker version 3.1.0</h3>
         <h4 style="margin-left: 20px;">Improvements</h4>
         <ul>		
